Add k-d trees with radius & nearest neighbor search, based on Supercluster.KDTree

--- a/SpacePartitioning/packages.config
+++ b/SpacePartitioning/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DynamoVisualProgramming.DynamoServices" version="2.1.0.7465" targetFramework="net47" />
   <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.1.0.7465" targetFramework="net47" />
+  <package id="Supercluster.KDTree" version="1.0.4" targetFramework="net47" />
 </packages>
