--- a/SpacePartitioning/SpacePartitioning.csproj
+++ b/SpacePartitioning/SpacePartitioning.csproj
@@ -44,6 +44,9 @@
       <HintPath>..\packages\DynamoVisualProgramming.ZeroTouchLibrary.2.1.0.7465\lib\net47\ProtoGeometry.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Supercluster.KDTree, Version=1.0.4.0, Culture=neutral, PublicKeyToken=4423da5f8ba350cf, processorArchitecture=MSIL">
+      <HintPath>..\packages\Supercluster.KDTree.1.0.4\lib\Supercluster.KDTree.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,6 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\DynamoKDTree3D.cs" />
+    <Compile Include="src\DynamoKDTree2D.cs" />
     <Compile Include="src\OctreeOptions.cs" />
     <Compile Include="src\SimpleOctree.cs" />
     <Compile Include="src\DynamoOctree.cs" />
